# v0latil3

./: .gitignore  404.html  Cargo.toml  LICENSE  LICENSE_APACHE  LICENSE_MIT  README.md  _config.yml  config.yml  index.html  package-lock.json  package.json
.github/: dependabot.yml
html/: 404.html  redirect.html  ticks.html
js/: index.js  package-lock.json  package.json
src/: index.html  index.js  lib.rs  main.rs  server.rs  utils.rs
src/html/: 404.html
src/js/: index.js  package-lock.json  package.json
