[package]
name = "v0latil3"
version = "0.1.0"
edition = "2021"
authors = ["m-ikiara", "gilbert-kiana"]
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oauth2 = { version = "4.4.2", default-features = false }
tiny_http = "0.12.0"

[profile.release]
opt-level = "s"
